--- a/educational-platform/src/Styles/theme.css
+++ b/educational-platform/src/Styles/theme.css
@@ -20,3 +20,11 @@
   background-color: white;
   color: black;
 }
+
+.table-instrcutor {
+  margin-top: 20px;
+}
+
+.add-instructor-form {
+  width: 90%;
+}
